force-app/main/default/objects/Account/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <description>Referenced in New Job Inquiry Flow</description>
    <formula>BillingStreet &amp; &quot;, &quot; &amp; BillingCity &amp; &quot;, &quot;&amp; BillingState &amp; &quot;, &quot;&amp; BillingPostalCode</formula>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>