force-app/main/default/objects/Account/fields/Account_Billing_CityStateZip__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_CityStateZip__c</fullName>
    <formula>BillingCity &amp; &quot;, &quot; &amp;  BillingState &amp; &quot; &quot; &amp;   IF(LEN(BillingPostalCode)&lt;5  , &quot;0&quot; &amp; BillingPostalCode, BillingPostalCode)</formula>
    <label>Account Billing CityStateZip</label>
    <type>Text</type>
</CustomField>