force-app/main/default/objects/Account/fields/Account_Name_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_and_Address__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp;  Account_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name and Address</label>
    <type>Text</type>
</CustomField>