force-app/main/default/objects/Account/fields/Account_Phone_from_Data_com__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_from_Data_com__c</fullName>
    <label>Account Phone from Data.com</label>
    <type>Phone</type>
</CustomField>