force-app/main/default/objects/Account/fields/Alt_Cell__c.field-meta.xml
<CustomField>
    <fullName>Alt_Cell__c</fullName>
    <label>Alt #./ Cell #</label>
    <type>Phone</type>
</CustomField>