force-app/main/default/objects/Account/fields/ATI_Email__c.field-meta.xml
<CustomField>
    <fullName>ATI_Email__c</fullName>
    <description>An email will be sent out to this person when an invoice is marked finalized.</description>
    <inlineHelpText>Associated ATI email for finalized invoice notification.</inlineHelpText>
    <label>ATI Email</label>
    <type>Email</type>
</CustomField>