force-app/main/default/objects/Account/fields/BD_Target__c.field-meta.xml
<CustomField>
    <fullName>BD_Target__c</fullName>
    <inlineHelpText>To identify targeted accounts for Business Development</inlineHelpText>
    <label>BD Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Industrial &amp; Commercial</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Multi-family</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>State &amp; Municipalities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>