force-app/main/default/objects/Account/fields/BigTime_Status__c.field-meta.xml
<CustomField>
    <fullName>BigTime_Status__c</fullName>
    <label>BigTime Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>