force-app/main/default/objects/Account/fields/BigTimeSID__c.field-meta.xml
<CustomField>
    <fullName>BigTimeSID__c</fullName>
    <label>BigTime SID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>