force-app/main/default/objects/Account/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>