force-app/main/default/objects/Account/fields/Collections_Notes__c.field-meta.xml
<CustomField>
    <fullName>Collections_Notes__c</fullName>
    <label>Collections Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>