force-app/main/default/objects/Account/fields/Create_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Create_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Billing Address</label>
    <type>Checkbox</type>
</CustomField>