force-app/main/default/objects/Account/fields/Created_by_Cirrus_Insight__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Cirrus_Insight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to report on user usage of Cirrus Insight.</description>
    <label>Created_by_Cirrus_Insight</label>
    <type>Checkbox</type>
</CustomField>