force-app/main/default/objects/Account/fields/ERA__c.field-meta.xml
<CustomField>
    <fullName>ERA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether this Account has an active ERA agreement</description>
    <label>ERA</label>
    <type>Checkbox</type>
</CustomField>