force-app/main/default/objects/Account/fields/Existing_Business_Date__c.field-meta.xml
<CustomField>
    <fullName>Existing_Business_Date__c</fullName>
    <label>Existing Business Date</label>
    <type>Date</type>
</CustomField>