force-app/main/default/objects/Account/fields/Geocode_Quality__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Quality__c</fullName>
    <label>Geocode Quality</label>
    <length>250</length>
    <type>Text</type>
</CustomField>