force-app/main/default/objects/Account/fields/Geocode_Retrieval_Time__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Retrieval_Time__c</fullName>
    <label>Geocode Retrieval Time</label>
    <type>DateTime</type>
</CustomField>