force-app/main/default/objects/Account/fields/GeoPointe_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>GeoPointe_GeoLocation__c</fullName>
    <label>GeoPointe GeoLocation</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>