force-app/main/default/objects/Account/fields/Google_Drive_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Name__c</fullName>
    <formula>IF( IsPersonAccount ,  FirstName+&apos; &apos;+ LastName , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Drive Folder Name</label>
    <type>Text</type>
</CustomField>