force-app/main/default/objects/Account/fields/Google_Drive_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Path__c</fullName>
    <formula>&apos;UAT-zz-SFJobs-Accounts&apos;</formula>
    <label>Google Drive Folder Path</label>
    <type>Text</type>
</CustomField>