force-app/main/default/objects/Account/fields/Google_Drive_Prev_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Prev_Folder_Name__c</fullName>
    <label>Google Drive Prev Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>