force-app/main/default/objects/Account/fields/GSA__c.field-meta.xml
<CustomField>
    <fullName>GSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>General Services Administration Account</description>
    <inlineHelpText>General Services Administration Accounts</inlineHelpText>
    <label>GSA</label>
    <type>Checkbox</type>
</CustomField>