force-app/main/default/objects/Account/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <label>Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>At-Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>