force-app/main/default/objects/Account/fields/Health_Risks__c.field-meta.xml
<CustomField>
    <fullName>Health_Risks__c</fullName>
    <label>Health Risks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reduced Work</fullName>
            </value>
            <value>
                <fullName>Poor Job Performance</fullName>
            </value>
            <value>
                <fullName>Customer Service Complaint</fullName>
            </value>
            <value>
                <fullName>Billing Dispute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>