force-app/main/default/objects/Account/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <description>Picklist to indicate whether an Account is New Business or Existing Business, populated via workflows &apos;New Business Type Population&apos; and &apos;Existing Business Type Population&apos; determined by Last Job Date.</description>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Existing Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>