force-app/main/default/objects/Account/fields/Last_Job_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Date__c</fullName>
    <description>Field to capture the date that the last Job was created against this Account.  Populated via code to be used in bonus calculations to determine New Business, which are Jobs created against an Account that have not had any Jobs created against them in the last 18 months.  Accounts will then remain as &apos;New Business&apos; for 18 months after that first Job.</description>
    <label>Last Job Date</label>
    <type>Date</type>
</CustomField>