force-app/main/default/objects/Account/fields/Last_Successful_Timberland_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Timberland_Update__c</fullName>
    <label>Last Successful Timberline Update</label>
    <type>DateTime</type>
</CustomField>