force-app/main/default/objects/Account/fields/Last_Timberland_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Timberland_Update__c</fullName>
    <label>Last Timberline Update</label>
    <type>DateTime</type>
</CustomField>