force-app/main/default/objects/Account/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master Account lookup field is to be used for the account consolidation to re-associate all merged duplicate account related records (Jobs, Contacts, etc.) with the Master Account via code and to create Billing Address records linked to the Master Account.  Once all data has been migrated and merged Accounts are deleted, this field can also be deleted.</description>
    <label>Master Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>