force-app/main/default/objects/Account/fields/MSA_Dup_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>MSA_Dup_Activity_ID__c</fullName>
    <label>MSA Dup Activity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>