force-app/main/default/objects/Account/fields/MSA_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>MSA_Submitter_Email__c</fullName>
    <label>MSA Submitter Email</label>
    <type>Email</type>
</CustomField>