force-app/main/default/objects/Account/fields/National_Account_Chicago__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Chicago__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to be used by Chicago office to filter National Accounts run through their office.  National Account checkbox should also be checked.</description>
    <inlineHelpText>This designates this account as a national account through Chicago.</inlineHelpText>
    <label>National Account - Chicago</label>
    <type>Checkbox</type>
</CustomField>