force-app/main/default/objects/Account/fields/New_Business_Type_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Type_Date__c</fullName>
    <description>Date that an Account is set to &apos;New Business,&apos; in order to automatically set to &apos;Existing Business&apos; after 18 months via workflow &apos;Existing Business Type Population,&apos; to calculate commission calculations</description>
    <label>New Business Type Date</label>
    <type>Date</type>
</CustomField>