force-app/main/default/objects/Account/fields/Number_of_Marketing_Notes_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Marketing_Notes_This_Year__c</fullName>
    <label>Number of Marketing Notes This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>