force-app/main/default/objects/Account/fields/Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Office Manager lookup populated via Process Builder flow &apos;Office Manager Population onto Account&apos; used in Account Creation Approval Process</description>
    <label>Office Manager</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Office Manager)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>