force-app/main/default/objects/Account/fields/Parent_CompanyId__c.field-meta.xml
<CustomField>
    <fullName>Parent_CompanyId__c</fullName>
    <formula>Parent.Company_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent CompanyId</label>
    <type>Text</type>
</CustomField>