force-app/main/default/objects/Account/fields/Permanently_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Permanently_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanently Inactive</label>
    <type>Checkbox</type>
</CustomField>