force-app/main/default/objects/Account/fields/Person_Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Address__c</fullName>
    <formula>BillingStreet  &amp; &quot;,&quot; &amp;  BillingCity  &amp; &quot;,&quot; &amp;  BillingState</formula>
    <label>Person Account Address</label>
    <type>Text</type>
</CustomField>