force-app/main/default/objects/Account/fields/Person_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Person_Billing_City__c</fullName>
    <description>Used in New Job Inquiry visual flow</description>
    <formula>BillingCity</formula>
    <label>Person Billing City</label>
    <type>Text</type>
</CustomField>