force-app/main/default/objects/Account/fields/Person_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Person_Billing_State__c</fullName>
    <description>Used in New Job Inquiry visual flow</description>
    <formula>BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Billing State</label>
    <type>Text</type>
</CustomField>