force-app/main/default/objects/Account/fields/Person_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Person_Billing_Street__c</fullName>
    <description>Used in New Job Inquiry visual flow</description>
    <formula>BillingStreet</formula>
    <label>Person Billing Street</label>
    <type>Text</type>
</CustomField>