force-app/main/default/objects/Account/fields/Person_Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Person_Billing_Zip_Postal_Code__c</fullName>
    <description>Used in New Job Inquiry visual flow</description>
    <formula>BillingPostalCode</formula>
    <label>Person Billing Zip/Postal Code</label>
    <type>Text</type>
</CustomField>