force-app/main/default/objects/Account/fields/Previous_Job_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Job_Date__c</fullName>
    <description>Job created against this account prior to the last Job-- populated via code.</description>
    <label>Previous Job Date</label>
    <type>Date</type>
</CustomField>