force-app/main/default/objects/Account/fields/Program_Account__c.field-meta.xml
<CustomField>
    <fullName>Program_Account__c</fullName>
    <description>Indicate an account for program account. Default value will be no unless marked yes.
Help Text</description>
    <label>Program Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>