force-app/main/default/objects/Account/fields/Referred_By_Internal__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Internal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By Internal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>