force-app/main/default/objects/Account/fields/RFP_Affiliated__c.field-meta.xml
<CustomField>
    <fullName>RFP_Affiliated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFP Affiliated</label>
    <type>Checkbox</type>
</CustomField>