force-app/main/default/objects/Account/fields/RFP_Hours__c.field-meta.xml
<CustomField>
    <fullName>RFP_Hours__c</fullName>
    <label>RFP Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>