force-app/main/default/objects/Account/fields/Send_to_Timberline__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Timberline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Timberline</label>
    <type>Checkbox</type>
</CustomField>