force-app/main/default/objects/Account/fields/Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Group</label>
    <referenceTo>Tax_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>