force-app/main/default/objects/Account/fields/Tax_Group_Timber__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group_Timber__c</fullName>
    <formula>Tax_Group__r.Timberline_Id__c</formula>
    <label>Tax Group (Timberline)</label>
    <type>Text</type>
</CustomField>