force-app/main/default/objects/Account/fields/tdc_tsw__Last_Sender_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Last_Sender_Number__c</fullName>
    <description>Used for Sticky sender to store the last sender number</description>
    <label>Last Sender Number</label>
    <type>Phone</type>
</CustomField>