force-app/main/default/objects/Account/fields/Timberline_BillingStreet1__c.field-meta.xml
<CustomField>
    <fullName>Timberline_BillingStreet1__c</fullName>
    <label>Timberline_BillingStreet1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>