force-app/main/default/objects/Account/fields/Timberline_BillingStreet2__c.field-meta.xml
<CustomField>
    <fullName>Timberline_BillingStreet2__c</fullName>
    <label>Timberline_BillingStreet2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>