force-app/main/default/objects/Account/fields/Timberline_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Timberline_Customer_Name__c</fullName>
    <formula>LEFT(IF( ISBLANK( Name ),  LastName   &amp; &quot;; &quot; &amp; FirstName ,  Name ),35)</formula>
    <label>Timberline Customer Name</label>
    <type>Text</type>
</CustomField>